# packages/api/src/openapi/api.yml
@@ -416,6 +416,105 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
+    put:
+      tags:
+        - 🧑‍💻 Users
+      summary: Update user details by their unique user ID
+      description: This endpoint allows clients to update detailed information about a user using their unique user ID.
+      x-eov-operation-handler: userController
+      operationId: updateById
+      parameters:
+        - name: userId
+          in: path
+          description: The user's id.
+          required: true
+          schema:
+            type: string
+            example: 123e4567-e89b-12d3-a456-426614174000
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: The first name of the user.
+                  example: John
+                lastname:
+                  type: string
+                  description: The last name of the user.
+                  example: Doe
+                job:
+                  type: string
+                  description: The user's job title or position.
+                  example: Global Accounts Engineer
+                biography:
+                  type: string
+                  description: A brief description or biography of the user.
+                  example: JavaScript advocate, veteran
+              additionalProperties: false
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    format: int64
+                    description: HTTP status code indicating a successful operation.
+                    default: 200
+                  message:
+                    type: string
+                    description: Descriptive message of the operation.
+                    default: OK
+                  data:
+                    $ref: '#/components/schemas/User'
+                required:
+                  - statusCode
+                  - message
+                  - data
+                additionalProperties: false
+        400:
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Unauthorized'
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Forbidden'
+        404:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFound'
+        409:
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Conflict'
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
   # /users/{userId}/articles:
   #   post:
   #     tags:
